[gd_scene load_steps=13 format=3 uid="uid://c54af0wl0auwx"]

[ext_resource type="Script" uid="uid://b1mijyjkslhfu" path="res://globals/sound_manager/SoundManager.gd" id="1_0wbjb"]
[ext_resource type="AudioStream" uid="uid://knk8fcd6nusj" path="res://common/audio/sfx/ambi/AMBI_BASE.wav" id="2_3bdi4"]
[ext_resource type="Script" uid="uid://dd8uxrmtutff5" path="res://globals/sound_manager/sound_effect.gd" id="2_t4w6u"]
[ext_resource type="AudioStream" uid="uid://cwrmu1482xd6k" path="res://common/audio/sfx/ui/UI_QUEST_ACCEPT.wav" id="3_wh6ep"]
[ext_resource type="AudioStream" uid="uid://b1yky8tm5n131" path="res://common/audio/sfx/ambi/AMBI_RAIN.wav" id="5_6kart"]
[ext_resource type="AudioStream" uid="uid://crqbwcsq1viom" path="res://common/audio/sfx/build/BUILD_ENTER_BUILDMODE.wav" id="6_kcrfv"]
[ext_resource type="AudioStream" uid="uid://camm2n4s878j" path="res://common/audio/sfx/ui/aud_ui_navigate.wav" id="7_57f3y"]
[ext_resource type="AudioStream" uid="uid://swqe8i0xxikk" path="res://common/audio/sfx/interact/INTERACT_SCRAP.wav" id="13_12h0w"]
[ext_resource type="AudioStream" uid="uid://dhuhjisjlgm20" path="res://common/audio/sfx/interact/INTERACT_HARVEST.wav" id="14_8lw7p"]
[ext_resource type="AudioStream" uid="uid://civmxnmlw0b6r" path="res://common/audio/sfx/interact/INTERACT_WASTE.wav" id="15_amwb2"]
[ext_resource type="AudioStream" uid="uid://cjqacppbmh2tk" path="res://common/audio/sfx/ui/aud_ui_open.wav" id="17_ymhco"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8lw7p"]
random_pitch = 5.03
streams_count = 1
stream_0/stream = ExtResource("13_12h0w")

[node name="SoundManager" type="AudioStreamPlayer"]
process_mode = 3
script = ExtResource("1_0wbjb")

[node name="UiSoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -5.0
bus = &"SFX"

[node name="AmbientSoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_3bdi4")
volume_db = -20.0
autoplay = true
bus = &"Ambient"

[node name="WeatherSoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Ambient"

[node name="UiQuestAcceptedConnector" type="Node" parent="."]
script = ExtResource("2_t4w6u")
global_name = "GlobalSignalBus"
start_signal_name = "community_board_quest_accepted"
sound_effect = ExtResource("3_wh6ep")
metadata/_custom_type_script = "uid://dd8uxrmtutff5"

[node name="UiButtonPressedConnector" type="Node" parent="."]
script = ExtResource("2_t4w6u")
global_name = "GlobalSignalBus"
start_signal_name = "ui_button_pressed"
sound_effect = ExtResource("17_ymhco")
metadata/_custom_type_script = "uid://dd8uxrmtutff5"

[node name="UiButtonHoveredConnector" type="Node" parent="."]
script = ExtResource("2_t4w6u")
global_name = "GlobalSignalBus"
start_signal_name = "ui_button_hovered"
sound_effect = ExtResource("7_57f3y")
metadata/_custom_type_script = "uid://dd8uxrmtutff5"

[node name="RainEffectConnector" type="Node" parent="."]
script = ExtResource("2_t4w6u")
player_type = 2
global_name = "GlobalSignalBus"
start_signal_name = "started_raining"
stop_signal_name = "stopped_raining"
sound_effect = ExtResource("5_6kart")
metadata/_custom_type_script = "uid://dd8uxrmtutff5"

[node name="EnteredBuildModeConnector" type="Node" parent="."]
script = ExtResource("2_t4w6u")
global_name = "GlobalSignalBus"
start_signal_name = "activated_build_mode"
sound_effect = ExtResource("6_kcrfv")
metadata/_custom_type_script = "uid://dd8uxrmtutff5"

[node name="PickedUpScrapConnector" type="Node" parent="."]
script = ExtResource("2_t4w6u")
global_name = "GlobalSignalBus"
start_signal_name = "scrap_collected"
sound_effect = SubResource("AudioStreamRandomizer_8lw7p")
metadata/_custom_type_script = "uid://dd8uxrmtutff5"

[node name="GatherPlantsConnector" type="Node" parent="."]
script = ExtResource("2_t4w6u")
global_name = "GlobalSignalBus"
start_signal_name = "crop_harvested"
sound_effect = ExtResource("14_8lw7p")
metadata/_custom_type_script = "uid://dd8uxrmtutff5"

[node name="DepositWasteConnector" type="Node" parent="."]
script = ExtResource("2_t4w6u")
global_name = "GlobalSignalBus"
start_signal_name = "waste_deposited"
sound_effect = ExtResource("15_amwb2")
metadata/_custom_type_script = "uid://dd8uxrmtutff5"
